added todo list

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
 </head>
 <body>
     <h1>This site is gonna be AWESOME</h1>
+    <p>
+        To-Do-List:
+        <ol>
+            <li>Einkaufen</li>
+            <li>Essen</li>
+            <li>Saugen</li>
+        </ol>
+    </p>
 </body>
 <style>
     body {
