--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
         </ol>
     </p>
 </body>
-<style>
+<style:>
     body {
         background-color: blue;
         color: white;
+        font-family: -apple-system, "San Francisco";
     }
 </style>
 </html>
