changed bkg color to red

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </body>
 <style>
     body {
-        background-color: blue;
+        background-color: red;
         color: white;
         font-family: -apple-system, "San Francisco";
     }
