--- a/index.html
+++ b/index.html
@@ -1,24 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
-    <title>My first Website</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>Purzelin's Internetzseite</title>
+
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+      integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css"
+      integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+
+  <!--- Font Awesome -->
+  <link rel="stylesheet" href="font_awesome/css/font-awesome.min.css">
+
+  <!-- My styles -->
+  <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
+
 <body>
-    <h1>This site is gonna be AWESOME</h1>
-    <p>
-        To-Do-List:
-        <ol>
-            <li>Einkaufen</li>
-            <li>Essen</li>
-            <li>Saugen</li>
-        </ol>
-    </p>
+  <p>
+  <h1 class="center"> Eine Sonne, die sich in einem Quadrat mit abgerundeten Ecken dreht, wenn man sie mit der Maus berührt: </h1>
+  <h1 class="center">
+    <span class="fa-stack fa-3x fa-fw">
+      <i class="fa fa-square-o fa-stack-2x"></i>
+      <i class="fa fa-sun-o fa-stack-1x fa-spin-hover"></i>
+    </span>
+  </h1>
+  </p>
+
+
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
+  integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous">
+        </script>
 </body>
-<style>
-    body {
-        background-color: red;
-        color: white;
-        font-family: -apple-system, "San Francisco";
-    }
-</style>
 </html>
