the sun now spint automatically

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 
 <body>
   <p>
-  <h1 class="center"> Eine Sonne, die sich in einem Quadrat mit abgerundeten Ecken dreht, wenn man sie mit der Maus berührt: </h1>
+  <h1 class="center"> Eine Sonne, die sich in einem Quadrat mit abgerundeten Ecken dreht: </h1>
   <h1 class="center">
     <span class="fa-stack fa-3x fa-fw">
       <i class="fa fa-square-o fa-stack-2x"></i>
-      <i class="fa fa-sun-o fa-stack-1x fa-spin-hover"></i>
+      <i class="fa fa-sun-o fa-stack-1x fa-spin"></i>
     </span>
   </h1>
   </p>
