--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <h1 class="center">
     <span class="fa-stack fa-3x fa-fw">
       <i class="fa fa-square-o fa-stack-2x"></i>
-      <i class="fa fa-sun-o fa-stack-1x fa-spin"></i>
+      <i class="fa fa-sun-o fa-stack-1x fa-spin-hover"></i>
     </span>
   </h1>
   </p>
