added color changing wheel, yeah

--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
 
 <body>
   <p>
-  <h1 class="center"> Eine Sonne, die sich in einem Quadrat mit abgerundeten Ecken dreht: </h1>
-  <h1 class="center">
-    <span class="fa-stack fa-3x fa-fw">
-      <i class="fa fa-square-o fa-stack-2x"></i>
-      <i class="fa fa-sun-o fa-stack-1x fa-spin"></i>
-    </span>
-  </h1>
+  <div class="container-float">
+    <h1 class="center-me"> Klicke auf das Zahnrad!</h1>
+    <div class="center-me">
+      <button id="color-changer">
+        <i class="fa fa-cog fa-spin fa-3x fa-fw"></i>
+      </button>
+    </div>
+  </div>
   </p>
 
 
@@ -40,5 +41,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
   integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous">
         </script>
+  <!-- My own js -->
+  <script src="jQuery/jquery-2.2.3.js"></script>
+  <script src="scripts/main.js"></script>
 </body>
 </html>
