added visitor counter

--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
   </div>
   </p>
 
-
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <!-- Website Visitor Counter from counter-zaehler.de -->
+  <div class="center-me">
+    <script type="text/javascript" src="http://counter7.freecounter.ovh/private/counter.js?c=4e98ffdf9db4229f0dd7cb8ee85bc60d"></script>
+  </div>
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
   integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous">
