removed counter, added mail address

--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
       </button>
     </div>
   </div>
+  <div class="center-me">
+    Begeistert? Dann schreib mir einfach eine Mail: webdevkarl@gmail.com
   </p>
 
-  <!-- Website Visitor Counter from counter-zaehler.de -->
-  <div class="center-me">
-    <script type="text/javascript" src="http://counter7.freecounter.ovh/private/counter.js?c=4e98ffdf9db4229f0dd7cb8ee85bc60d"></script>
-  </div>
+
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
   integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous">
