fixed mail address

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
   </div>
   <div class="center-me">
-    Begeistert? Dann schreib mir einfach eine Mail: webdevkarl@gmail.com
+    Begeistert? Dann schreib mir einfach eine Mail: webdevotto@gmail.com
   </p>
 
 
