--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
     <div class="center-me">
       <button id="color-changer">
         <i class="fa fa-cog fa-spin fa-3x fa-fw"></i>
-      </button>
+      </button> <br>
     </div>
   </div>
   <div class="center-me">
-    Begeistert? Dann schreib mir einfach eine Mail: webdevotto@gmail.com
+    Begeistert? <br>
+    Dann schreib mir einfach eine Mail: webdevotto@gmail.com
+  </div>
   </p>
 
 
