--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Purzelin's Internetzseite</title>
-
+{#   <title>Purzelin's Internetzseite</title>
+ #}
+  <title>Das perfekte Dinner</title>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
       integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -23,7 +24,16 @@
 </head>
 
 <body>
-  <p>
+  <div class="container-float">
+    <h1> Das perfekte Dinner bei Jana und Timon
+    <ul>
+      <li>Amuse Gueule: Kleine Kostbarkeiten aus Spanien</li>
+      <li>Vorspeise: Solide Grundlage aus Deutschland</li>
+      <li>Hauptspeise: Der Klassiker aus Indien</li>
+      <li>Nachspeise: Charmanter Abschluß aus Frankreich und den USA</li>
+    </ul>
+  </div>
+{#   <p>
   <div class="container-float">
     <h1 class="center-me"> Klicke auf das Zahnrad!</h1>
     <div class="center-me">
@@ -36,7 +46,7 @@
     Begeistert? <br>
     Dann schreib mir einfach eine Mail: webdevotto@gmail.com
   </div>
-  </p>
+  </p> #}
 
 
   <!-- Latest compiled and minified JavaScript -->
@@ -55,7 +65,6 @@
 
   ga('create', 'UA-84740188-1', 'auto');
   ga('send', 'pageview');
-
-</script>
+  </script>
 </body>
 </html>
