--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-{#   <title>Purzelin's Internetzseite</title>
- #}
+  <!-- <title>Purzelin's Internetzseite</title> -->
   <title>Das perfekte Dinner</title>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
@@ -33,7 +32,7 @@
       <li>Nachspeise: Charmanter Abschluß aus Frankreich und den USA</li>
     </ul>
   </div>
-{#   <p>
+<!--   <p>
   <div class="container-float">
     <h1 class="center-me"> Klicke auf das Zahnrad!</h1>
     <div class="center-me">
@@ -46,8 +45,8 @@
     Begeistert? <br>
     Dann schreib mir einfach eine Mail: webdevotto@gmail.com
   </div>
-  </p> #}
-
+  </p>
+ -->
 
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
