--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
 <body>
   <div class="container-float">
-    <h1> Das perfekte Dinner bei Jana und Timon
-    <ul>
-      <li>Amuse Gueule: Kleine Kostbarkeiten aus Spanien</li>
-      <li>Vorspeise: Solide Grundlage aus Deutschland</li>
-      <li>Hauptspeise: Der Klassiker aus Indien</li>
-      <li>Nachspeise: Charmanter Abschluß aus Frankreich und den USA</li>
+    <h1 class="center-me"> Das perfekte Dinner bei Jana und Timon
+    <ul class="list-group">
+      <li class="list-group-item">Amuse Gueule: Kleine Kostbarkeiten aus Spanien</li>
+      <li class="list-group-item">Vorspeise: Solide Grundlage aus Deutschland</li>
+      <li class="list-group-item">Hauptspeise: Der Klassiker aus Indien</li>
+      <li class="list-group-item">Nachspeise: Charmanter Abschluß aus Frankreich und den USA</li>
     </ul>
   </div>
 <!--   <p>
