--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-  <div class="container-float">
+  <div class="container">
     <h1 class="center-me"> Das perfekte Dinner bei Jana und Timon
     <ul class="list-group">
       <li class="list-group-item">Amuse Gueule: Kleine Kostbarkeiten aus Spanien</li>
