--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 </head>
 
 <body>
-  <div class="container">
-    <h1 class="center-me"> Das perfekte Dinner bei Jana und Timon
+  <div class="container"><br>
+    <h1 class="center-me"> Das perfekte Dinner bei Jana und Timon</h1>
     <ul class="list-group">
-      <li class="list-group-item">Amuse Gueule: Kleine Kostbarkeiten aus Spanien</li>
-      <li class="list-group-item">Vorspeise: Solide Grundlage aus Deutschland</li>
-      <li class="list-group-item">Hauptspeise: Der Klassiker aus Indien</li>
-      <li class="list-group-item">Nachspeise: Charmanter Abschluß aus Frankreich und den USA</li>
+      <li class="list-group-item"><strong>Amuse Gueule</strong>: Kleine Kostbarkeiten aus Spanien</li>
+      <li class="list-group-item"><strong>Vorspeise</strong>: Solide Grundlage aus Deutschland</li>
+      <li class="list-group-item"><strong>Hauptspeise</strong>: Der Klassiker aus Indien</li>
+      <li class="list-group-item"><strong>Nachspeise</strong>: Charmanter Abschluß aus Frankreich und den USA</li>
     </ul>
   </div>
 <!--   <p>
