--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 </head>
 
 <body>
-  <div class="container"><br>
-    <h1 class="center-me"> Das perfekte Dinner bei Jana und Timon</h1>
+  <div class="container">
+    <h1 class="center-me"> Das perfekte Dinner bei Jana und Timon</h1><br>
     <ul class="list-group">
-      <li class="list-group-item"><strong>Amuse Gueule</strong>: Kleine Kostbarkeiten aus Spanien</li>
-      <li class="list-group-item"><strong>Vorspeise</strong>: Solide Grundlage aus Deutschland</li>
-      <li class="list-group-item"><strong>Hauptspeise</strong>: Der Klassiker aus Indien</li>
-      <li class="list-group-item"><strong>Nachspeise</strong>: Charmanter Abschluß aus Frankreich und den USA</li>
+      <a href="#" class="list-group-item list-group-item-action list-group-item-success"><strong>Amuse Gueule</strong>: Kleine Kostbarkeiten aus Spanien</a>
+      <a href="#" class="list-group-item list-group-item-action list-group-item-success"><strong>Vorspeise</strong>: Solide Grundlage aus Deutschland</a>
+      <a href="#" class="list-group-item list-group-item-action list-group-item-success"><strong>Hauptspeise</strong>: Der Klassiker aus Indien</a>
+      <a href="#" class="list-group-item list-group-item-action list-group-item-success"><strong>Nachspeise</strong>: Charmanter Abschluß aus Frankreich und den USA</a>
     </ul>
   </div>
 <!--   <p>
