--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <h1 class="center-me"> Das perfekte Dinner bei Jana und Timon</h1><br>
     <ul class="list-group">
       <a href="#" class="list-group-item list-group-item-action list-group-item-success"><strong>Amuse Gueule</strong>: Kleine Kostbarkeiten aus Spanien</a>
-      <a href="#" class="list-group-item list-group-item-action list-group-item-success"><strong>Vorspeise</strong>: Solide Grundlage aus Deutschland</a>
-      <a href="#" class="list-group-item list-group-item-action list-group-item-success"><strong>Hauptspeise</strong>: Der Klassiker aus Indien</a>
-      <a href="#" class="list-group-item list-group-item-action list-group-item-success"><strong>Nachspeise</strong>: Charmanter Abschluß aus Frankreich und den USA</a>
+      <a href="#" class="list-group-item list-group-item-action list-group-item-warning"><strong>Vorspeise</strong>: Solide Grundlage aus Deutschland</a>
+      <a href="#" class="list-group-item list-group-item-action list-group-item-danger"><strong>Hauptspeise</strong>: Der Klassiker aus Indien</a>
+      <a href="#" class="list-group-item list-group-item-action list-group-item-info"><strong>Nachspeise</strong>: Charmanter Abschluß aus Frankreich und den USA</a>
     </ul>
   </div>
 <!--   <p>
